project/stage/testing/lexical/parse_tests/tests/reject/bad_var_decl/missing_semicolon.ul
boolean FOObish(int goodVar) {
    
    void whereTheSemiAT

}
